--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://goitacademy.github.io/test-task/",
+  "homepage": "https://sofiialives.github.io/test-task/",
   "name": "test-task",
   "version": "0.1.0",
   "private": true,
